BINDIR       = $(top_builddir)/build/
ASSEMBLY_DLL = FileFind.Meshwork.dll
ASSEMBLY     = $(BINDIR)/$(ASSEMBLY_DLL)

FILES =  \
	AckMethod.cs \
	AssemblyInfo.cs \
	AutoconnectManager.cs \
	ChatRoom.cs \
	Classless.Hasher/CRC.cs \
	Classless.Hasher/CRCParameters.cs \
	Classless.Hasher/CRCStandard.cs \
	Classless.Hasher/HashAlgorithmParameters.cs \
	ConnectionState.cs \
	ConnectionType.cs \
	Core.cs \
	DataConverter.cs \
	DebugInfo.cs \
	Encryption.cs \
	EndianBitConverter.cs \
	Errors.cs \
	EventArgs.cs \
	Exceptions.cs \
	FileFind.Meshwork.Collections/MessageIdCollection.cs \
	FileFind.Meshwork.Collections/NodeConnectionCollection.cs \
	FileFind.Meshwork.Destination/DestinationManager.cs \
	FileFind.Meshwork.Destination/IDestination.cs \
	FileFind.Meshwork.Destination/IPDestination.cs \
	FileFind.Meshwork.Destination/TCPDestination.cs \
	FileFind.Meshwork.Filesystem/AbstractDirectory.cs \
	FileFind.Meshwork.Filesystem/AbstractFile.cs \
	FileFind.Meshwork.Filesystem/FileSystemProvider.cs \
	FileFind.Meshwork.Filesystem/IDirectory.cs \
	FileFind.Meshwork.Filesystem/IDirectoryItem.cs \
	FileFind.Meshwork.Filesystem/IFile.cs \
	FileFind.Meshwork.Filesystem/ILocalDirectoryItem.cs \
	FileFind.Meshwork.Filesystem/IRemoteDirectoryItem.cs \
	FileFind.Meshwork.Filesystem/LocalDirectory.cs \
	FileFind.Meshwork.Filesystem/LocalFile.cs \
	FileFind.Meshwork.Filesystem/MyDirectory.cs \
	FileFind.Meshwork.Filesystem/NetworkDirectory.cs \
	FileFind.Meshwork.Filesystem/NodeDirectory.cs \
	FileFind.Meshwork.Filesystem/PathUtil.cs \
	FileFind.Meshwork.Filesystem/RemoteDirectory.cs \
	FileFind.Meshwork.Filesystem/RemoteFile.cs \
	FileFind.Meshwork.Filesystem/RootDirectory.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/BitTorrentFileTransfer.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/BitTorrentFileTransferPeer.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/BitTorrentFileTransferProvider.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/MeshworkPeerConnection.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/MeshworkPeerConnectionListener.cs \
	FileFind.Meshwork.FileTransfer.BitTorrent/MeshworkTrackerClient.cs \
	FileFind.Meshwork.FileTransfer/FileTransferBase.cs \
	FileFind.Meshwork.FileTransfer/FileTransferDirection.cs \
	FileFind.Meshwork.FileTransfer/FileTransferManager.cs \
	FileFind.Meshwork.FileTransfer/FileTransferPeerBase.cs \
	FileFind.Meshwork.FileTransfer/FileTransferPeerStatus.cs \
	FileFind.Meshwork.FileTransfer/FileTransferStatus.cs \
	FileFind.Meshwork.FileTransfer/IFileTransfer.cs \
	FileFind.Meshwork.FileTransfer/IFileTransferPeer.cs \
	FileFind.Meshwork.FileTransfer/IFileTransferProvider.cs \
	FileFind.Meshwork.Logging/ConsoleCrayon.cs \
	FileFind.Meshwork.Logging/ConsoleLogger.cs \
	FileFind.Meshwork.Logging/FileLogger.cs \
	FileFind.Meshwork.Logging/ILogger.cs \
	FileFind.Meshwork.Logging/LogLevel.cs \
	FileFind.Meshwork.Protocol/MemoInfo.cs \
	FileFind.Meshwork.Protocol/MessageContentClasses.cs \
	FileFind.Meshwork.Search/FileSearch.cs \
	FileFind.Meshwork.Search/FileSearchFilter.cs \
	FileFind.Meshwork.Search/FileSearchGroup.cs \
	FileFind.Meshwork.Search/FileSearchManager.cs \
	FileFind.Meshwork.Search/SearchResult.cs \
	FileFind.Meshwork.Transport/AESTransportEncryptor.cs \
	FileFind.Meshwork.Transport/IMeshworkOperation.cs \
	FileFind.Meshwork.Transport/ITransport.cs \
	FileFind.Meshwork.Transport/ITransportEncryptor.cs \
	FileFind.Meshwork.Transport/ITransportListener.cs \
	FileFind.Meshwork.Transport/TcpListener.cs \
	FileFind.Meshwork.Transport/TcpTransport.cs \
	FileFind.Meshwork.Transport/TransportBase.cs \
	FileFind.Meshwork.Transport/TransportManager.cs \
	FileFind.Meshwork.Transport/TransportState.cs \
	FileFind.Stun/AddressAttributeBase.cs \
	FileFind.Stun/ChangeRequestAttribute.cs \
	FileFind.Stun/MappedAddressAttribute.cs \
	FileFind.Stun/MessageAttribute.cs \
	FileFind.Stun/MessageHeader.cs \
	FileFind.Stun/MessageType.cs \
	FileFind.Stun/SourceAddressAttribute.cs \
	FileFind.Stun/StunClient.cs \
	FileFind.Stun/Utility.cs \
	FileFind/Common.cs \
	FileFind/Extensions.cs \
	FileFind/IPAddressExtensions.cs \
	FileFind/IPv6Util.cs \
	FileFind/JSONFormatter.cs \
	FileFind/ReadOnlyDictionary.cs \
	FileFind/SerializableDictionary.cs \
	FileFind/Serialization.cs \
	FileFind/StringWriterWithEncoding.cs \
	Hyena.Data.Sqlite/DatabaseColumnAttribute.cs \
	Hyena.Data.Sqlite/SqliteUtils.cs \
	Hyena.Query/AliasedObjectSet.cs \
	Hyena.Query/DateQueryValue.cs \
	Hyena.Query/ExactStringQueryValue.cs \
	Hyena.Query/FileSizeQueryValue.cs \
	Hyena.Query/IntegerKeyedObjectQueryValue.cs \
	Hyena.Query/IntegerQueryValue.cs \
	Hyena.Query/NullQueryValue.cs \
	Hyena.Query/QueryField.cs \
	Hyena.Query/QueryFieldSet.cs \
	Hyena.Query/QueryLimit.cs \
	Hyena.Query/QueryListNode.cs \
	Hyena.Query/QueryNode.cs \
	Hyena.Query/QueryOperator.cs \
	Hyena.Query/QueryOrder.cs \
	Hyena.Query/QueryParser.cs \
	Hyena.Query/QueryTermNode.cs \
	Hyena.Query/QueryToken.cs \
	Hyena.Query/QueryValue.cs \
	Hyena.Query/RelativeTimeSpanQueryValue.cs \
	Hyena.Query/StringQueryValue.cs \
	Hyena.Query/TimeSpanQueryValue.cs \
	Hyena.Query/UserQueryParser.cs \
	Hyena.Query/XmlQueryParser.cs \
	Hyena/DateTimeUtil.cs \
	Hyena/StringUtil.cs \
	IAvatarManager.cs \
	IMeshworkPlugin.cs \
	INodeConnection.cs \
	IPlatform.cs \
	ISettings.cs \
	Linux.cs \
	LocalNodeConnection.cs \
	LoggingService.cs \
	Memo.cs \
	Message.cs \
	MessageBuilder.cs \
	MessageProcessor.cs \
	NearbyNode.cs \
	Network.cs \
	NetworkInfo.cs \
	NetworkState.cs \
	Node.cs \
	Object.cs \
	OSX.cs \
	PluginInfo.cs \
	PublicKey.cs \
	RemoteNodeConnection.cs \
	SettingsBase.cs \
	ShareBuilder.cs \
	ShareHasher.cs \
	ShareWatcher.cs \
	TextCatalog.cs \
	TrustedNodeInfo.cs \
	FileTypeQueryValue.cs \
	Validator.cs \
	Windows.cs                             

BUILD_FILES = $(addprefix $(srcdir)/, $(FILES))

REFERENCES = \
	-r:$(top_builddir)/build/DiffieHellman.dll \
	-r:$(top_builddir)/build/MonoTorrent.dll \
	-r:System.Web.Services \
	-r:System.Web.Extensions \
	-r:System.Web \
	-r:System.Data \
	-r:Mono.Data \
	-r:Mono.Data.Sqlite \
	-r:Mono.Posix

all: $(ASSEMBLY)

$(ASSEMBLY): $(FILES)
	mkdir -p $(top_builddir)/
	$(MCS) -debug -out:$@ -target:library -unsafe -define:MONO_DATACONVERTER_PUBLIC $(REFERENCES) $(BUILD_FILES)

CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
EXTRA_DIST = $(FILES)

meshworkdir = $(MESHWORK_DIR)
meshwork_DATA = $(ASSEMBLY) $(ASSEMBLY).mdb
